2006-03-23  Maciej Stachowiak  <mjs@apple.com>

        - Initial version of ReTest test framework 

        * MANIFEST.SKIP: Added.
        * Makefile.PL: Added.
        * README: Added.
        * bin/retest: Added.
        * docs/ReTest.html: Added.
        * lib/ReTest.pm: Added.
        * lib/ReTest.pod: Added.
        * lib/ReTest/FS.pm: Added.
        * lib/ReTest/TEMPLATE.html: Added.
        * lib/ReTest/TEMPLATE.svg: Added.
        * lib/ReTest/TEMPLATE.xhtml: Added.
        * lib/ReTest/js-test-post.js: Added.
        * lib/ReTest/js-test-pre-html.js: Added.
        * lib/ReTest/js-test-pre-svg.js: Added.
        * lib/ReTest/js-test-pre-xhtml.js: Added.
        * lib/ReTest/js-test-pre.js: Added.
        * lib/ReTest/js-test-style.css: Added.
        * lib/ReTest/js-test-xhtml.js: Added.
