@@ -1,5 +1,11 @@
 2006-03-23  Maciej Stachowiak  <mjs@apple.com>
 
+        - remove a file that's not actually used by anything
+
+        * lib/ReTest/js-test-xhtml.js: Removed.
+
+2006-03-23  Maciej Stachowiak  <mjs@apple.com>
+
         - Initial version of ReTest test framework 
 
         * MANIFEST.SKIP: Added.
